--- a/index.html
+++ b/index.html
@@ -2,17 +2,63 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>BlogPost template by Adobe Dreamweaver</title>
+<link href="BlogPostAssets/styles/blogPostStyle.css" rel="stylesheet" type="text/css">
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
 
 <body>
-<h1>
-  <div>
-<p><img src="RE4wE9b.jfif" height="800" alt=""/>
-      <label for="textfield">方块狗的网站&nbsp; &nbsp; 持续更新！！！<br>
-      </label>
-    </p>
+<div id="mainwrapper">
+  <header> 
+    <!--**************************************************************************
+    Header starts here. It contains Logo and 3 navigation links. 
+    ****************************************************************************-->
+    <div id="logo">
+      <!-- <img src="logoImage.png" alt="sample logo"> -->
+      <!-- Company Logo text -->
+      方块岛&nbsp;</div>
+    <nav> <a href="#" title="Link">&nbsp;</a> <a href="#" title="Link">&nbsp;</a><a href="#" title="Link">&nbsp;</a> </nav>
+  </header>
+  <div id="content">
+    <div class="notOnDesktop"> 
+      <!-- This search box is displayed only in mobile and tablet laouts and not in desktop layouts -->
+      <input type="text" placeholder="Search">
+    </div>
+    <section id="mainContent"> 
+      <!--************************************************************************
+    Main Blog content starts here
+    ****************************************************************************-->
+      <h1>
+        <!-- Blog title -->
+方块岛&nbsp;</h1>
+<h3>
+  <!-- Tagline -->
+fangkuaidog.github.io&nbsp;</h3>
+      <div id="bannerImage"><img src="RE4wE9b.jfif" alt=""/></div>
+      <p>待编辑&nbsp; </p>
+      <p>待编辑&nbsp; </p>
+      <aside id="authorInfo"> 
+        <!-- The author information is contained here -->
+        <h2>关于&nbsp;</h2>
+        <p>待编辑&nbsp;</p>
+      </aside>
+    </section>
+<footer> 
+      <!--************************************************************************
+    Footer starts here
+    ****************************************************************************-->
+      <article>
+        <h3><a href="www.bilibili.com">BiliBili&nbsp;</a></h3>
+<p>关于哔哩哔哩&nbsp;</p>
+      </article>
+      <article>
+        <h3><a href="www.github.com/fangkuaidog">GitHub&nbsp;</a></h3>
+<p>关于 GitHub</p>
+      </article>
+    </footer>
   </div>
-</h1>
+  <div id="footerbar"><!-- Small footerbar at the bottom --></div>
+</div>
 </body>
 </html>
