--- a/index.html
+++ b/index.html
@@ -1,64 +1,137 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>BlogPost template by Adobe Dreamweaver</title>
-<link href="BlogPostAssets/styles/blogPostStyle.css" rel="stylesheet" type="text/css">
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
-</head>
-
-<body>
-<div id="mainwrapper">
-  <header> 
-    <!--**************************************************************************
-    Header starts here. It contains Logo and 3 navigation links. 
-    ****************************************************************************-->
-    <div id="logo">
-      <!-- <img src="logoImage.png" alt="sample logo"> -->
-      <!-- Company Logo text -->
-      方块岛&nbsp;</div>
-    <nav> <a href="#" title="Link">&nbsp;</a> <a href="#" title="Link">&nbsp;</a><a href="#" title="Link">&nbsp;</a> </nav>
-  </header>
-  <div id="content">
-    <div class="notOnDesktop"> 
-      <!-- This search box is displayed only in mobile and tablet laouts and not in desktop layouts -->
-      <input type="text" placeholder="Search">
-    </div>
-    <section id="mainContent"> 
-      <!--************************************************************************
-    Main Blog content starts here
-    ****************************************************************************-->
-      <h1>
-        <!-- Blog title -->
-方块岛&nbsp;</h1>
-<h3>
-  <!-- Tagline -->
-fangkuaidog.github.io&nbsp;</h3>
-      <div id="bannerImage"><img src="RE4wE9b.jfif" alt=""/></div>
-      <p>待编辑&nbsp; </p>
-      <p>待编辑&nbsp; </p>
-      <aside id="authorInfo"> 
-        <!-- The author information is contained here -->
-        <h2>关于&nbsp;</h2>
-        <p>待编辑&nbsp;</p>
-      </aside>
-    </section>
-<footer> 
-      <!--************************************************************************
-    Footer starts here
-    ****************************************************************************-->
-      <article>
-        <h3><a href="www.bilibili.com">BiliBili&nbsp;</a></h3>
-<p>关于哔哩哔哩&nbsp;</p>
-      </article>
-      <article>
-        <h3><a href="www.github.com/fangkuaidog">GitHub&nbsp;</a></h3>
-<p>关于 GitHub</p>
-      </article>
-    </footer>
-  </div>
-  <div id="footerbar"><!-- Small footerbar at the bottom --></div>
-</div>
-</body>
+<!DOCTYPE html>
+<html lang="zh-CN">
+	<head>
+		<title>演示</title>   
+		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<meta name="KEYWords" contect="演示">
+		<meta name="DEscription" contect="演示">
+		<meta name="Robots" contect= "all">
+		<link rel="stylesheet"  href="style.css">
+	</head>
+	<body>
+		<div class="container"><!-- 主体开始 -->
+			<div class="hander"><!-- 导航开始 -->
+				<nav id="nav-menu">
+					<a href="#" data-rel="home-me-section" class="active">首页</a>
+					<a href="#" data-rel="about-exp-section">关于</a>
+					<a href="#" data-rel="course-exp-section">历程</a>
+					<a href="#" data-rel="website-exp-section">站点</a>
+					</nav>
+				</div><!-- 导航结束 -->
+			<div class="content"><!-- 内容开始 -->
+				<section class="home-me-section active-section"><!-- 首页开始 -->
+					<div class="main"><!-- 首页内容 -->
+						<img src="img/bgo.jpg" class="bgo" />
+						<img src="https://q1.qlogo.cn/g?b=qq&nk=8641340&s=640" class="ato" onclick="alert('戳我干嘛 ￣へ￣')" />
+						<div class="name" onclick="javascript:this.innerHTML=(this.innerHTML=='cuzbk°'?'cuzbk°':'cuzbk°');">七夏</div>
+						<div class="motto" onclick="javascript:this.innerHTML=(this.innerHTML=='心存敬畏 行有所止'?'Be in awe and stop':'心存敬畏 行有所止');">心存敬畏 行有所止</div>
+						<div class="navo">
+							<ul>
+								<li><a href="#" target="_blank"><i class="fab fa-qq"></i></a></li><!-- QQ -->
+								<li><a href="#" target="_blank"><i class="fab fa-weibo"></i></a></li><!-- 微博 -->
+								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li><!-- twitter -->
+								<li><a href="#" target="_blank"><i class="fab fa-github"></i></a></li><!-- github -->
+								<li><a href="https:baidu.com" target="_blank"><i class="fas fa-paw"></i></a></li><!-- 百度 -->
+								<li><a href="#" target="_blank"><i class="fas fa-envelope"></i></a></li><!-- 邮箱 -->
+							</ul>
+						</div>
+					</div><!-- 首页内容结束 -->
+					</section><!-- 首页结束 -->
+				<section class="about-exp-section"><!-- 关于开始 -->
+					<div class="main"><!-- 关于内容 -->
+						<img src="img/bgt.jpg" class="bgt" />
+						<img src="https://q1.qlogo.cn/g?b=qq&nk=8641340&s=640" class="ats" />
+						<div class="about">
+							<p>>_酷爱前端开发，会去自学感兴趣的一切东西
+							<br>>_略懂H5，php，喜欢折腾，努力去解决遇到的一切问题
+							</p>
+						</div>
+						<div class="about" style="margin-top:20px;">
+							<p>这条路我才刚刚迈开了我的第一步
+							<br>路上的坎一定会非常多，但
+							<br>在我眼里
+							<br>没有什么问题是尝试不能解决的，
+							<br>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>
+						</div>
+					</div><!-- 关于内容结束 -->
+					</section><!-- 关于结束 -->
+				<section class="course-exp-section"><!-- 历程开始 -->
+					<div class="main"><!-- 历程内容 -->
+						<img src="img/bgt.jpg" class="bgt" />
+						<img src="https://q1.qlogo.cn/g?b=qq&nk=8641340&s=640" class="ats" />
+						<div class="box">
+							<div id="boxs">
+								<div class="track-list"><!-- 时间轴开始 -->
+								<ul>
+									<li>
+										<i class="node-icon"><img src="img/tbl.svg"></i>
+										<span class="time" style="color:#2ECC71">2021-1-6</span>
+										<span class="txt" style="color:#2ECC71">搭建个人引导页测试站</span>
+									</li>
+									<li>
+										<i class="node-icon"><img src="img/tb.svg"></i>
+										<span class="time">2021-1-6</span>
+										<span class="txt">搭建个人引导页测试站</span>
+									</li>
+									<li>
+										<i class="node-icon"><img src="img/tb.svg"></i>
+										<span class="time">2021-1-6</span>
+										<span class="txt">搭建个人引导页测试站</span>
+									</li>
+									<li>
+										<i class="node-icon"><img src="img/tb.svg"></i>
+										<span class="time">2021-1-6</span>
+										<span class="txt">搭建个人引导页测试站</span>
+									</li>
+									<li>
+										<i class="node-icon"><img src="img/tb.svg"></i>
+										<span class="time">2021-1-6</span>
+										<span class="txt">搭建个人引导页测试站</span>
+									</li>
+								</ul>
+							</div><!-- 时间轴结束 -->
+						</div>
+					</div>
+						<div style="color:#aaa;text-align:center;font-size:12px">
+								注: 上下滑动查看历史进程
+							</div>
+						</div><!-- 历程内容结束 -->
+					</section><!-- 历程结束 -->
+				<section class="website-exp-section"><!-- 站点开始 -->
+					<div class="main"><!-- 站点内容开始 -->
+						<img src="img/bgt.jpg" class="bgt" />
+						<img src="https://q1.qlogo.cn/g?b=qq&nk=8641340&s=640" class="ats" />
+						<a href="#" target="_blank"><div class="web">引导页</div></a><!-- 站点一 -->
+						<a href="#" target="_blank"><div class="web">引导页</div></a><!-- 站点二 -->
+						<div class="web" onclick="alert('敬请期待')">敬请期待</div>
+						<div class="tips">所有站点均正常运行</div>
+						</div><!-- 站点内容结束 -->
+					</section><!-- 站点结束 -->
+				</div><!-- 内容结束 -->
+			</div><!-- 主体结束 -->
+			<img src="img/China.svg" style="width:60px;right:0px;position:fixed;bottom:0px;" /><!-- 右下角国旗 -->
+		<div class="footer"><!-- 底部版权 -->
+				<span id="sitetime"></span><!-- 运行时间 -->
+				
+			</div><!-- 版权结束 -->
+		<div id="tp-weather-widget"></div><!-- 天气插件 -->
+		<script>
+			(function(a,h,g,f,e,d,c,b){b=function(){d=h.createElement(g);c=h.getElementsByTagName(g)[0];d.src=e;d.charset="utf-8";d.async=1;c.parentNode.insertBefore(d,c)};a["SeniverseWeatherWidgetObject"]=f;a[f]||(a[f]=function(){(a[f].q=a[f].q||[]).push(arguments)});a[f].l=+new Date();if(a.attachEvent){a.attachEvent("onload",b)}else{a.addEventListener("load",b,false)}}(window,document,"script","SeniverseWeatherWidget","//cdn.sencdn.com/widget2/static/js/bundle.js?t="+parseInt((new Date().getTime() / 100000000).toString(),10)));
+			window.SeniverseWeatherWidget('show', {
+			flavor: "bubble",
+			location: "WX4FBXXFKE4F",
+			geolocation: true,
+			language: "zh-Hans",
+			unit: "c",
+			theme: "auto",
+			token: "ac1d036a-99f3-4f88-ae98-f795bb93a9f0",
+			hover: "disabled",
+			container: "tp-weather-widget"
+			})
+		</script><!-- 天气插件结束 -->
+		<script src="js/index.js"></script><!-- 核心插件 -->
+		<script src="js/all.js"></script><!-- 图标库 -->
+		<script src="js/Sitetime.js"></script><!-- 运行时间 -->
+		<script src="js/Mouse.js"></script><!-- 点击烟花特效 -->
+	</body>
 </html>
