--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#" target="_blank"><i class="fab fa-qq"></i></a></li><!-- QQ -->
 								<li><a href="#" target="_blank"><i class="fab fa-weibo"></i></a></li><!-- 微博 -->
 								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li><!-- twitter -->
-								<li><a href="#" target="_blank"><i class="fab fa-github"></i></a></li><!-- github -->
+								<li><a href="https:github.com/fangkuaidog" target="_blank"><i class="fab fa-github"></i></a></li><!-- github -->
 								<li><a href="https:baidu.com" target="_blank"><i class="fas fa-paw"></i></a></li><!-- 百度 -->
 								<li><a href="#" target="_blank"><i class="fas fa-envelope"></i></a></li><!-- 邮箱 -->
 							</ul>
