--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="content"><!-- 内容开始 -->
 				<section class="home-me-section active-section"><!-- 首页开始 -->
 					<div class="main"><!-- 首页内容 -->
-						<img src="img/bgo.jpg" class="bgo" />
+						<img src="RE4wE9b.jfif" class="bgo" />
 						
 						<div class="name" onclick="javascript:this.innerHTML=(this.innerHTML=='cuzbk°'?'cuzbk°':'cuzbk°');">方块狗</div>
 						<div class="motto" onclick="javascript:this.innerHTML=(this.innerHTML=='心存敬畏 行有所止'?'Be in awe and stop':'心存敬畏 行有所止');"></div>
@@ -43,7 +43,7 @@
 					</section><!-- 首页结束 -->
 				<section class="about-exp-section"><!-- 关于开始 -->
 					<div class="main"><!-- 关于内容 -->
-						<img src="img/bgt.jpg" class="bgt" />
+						<img src="RE4wE9b.jfif" class="bgt" />
 						
 						<div class="about">
 							<p>>_酷爱开发，会去自学感兴趣的一切东西
@@ -79,7 +79,7 @@
 			{
 				margin-top: 10px;
 				margin-left: 10px;
-				height: 10px;
+				height: 5px;
 				font-size: 10px;
 			}
 		</style>
