--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					</section><!-- 关于结束 -->
 				<section class="course-exp-section"><!-- 历程开始 -->
 					<div class="main"><!-- 历程内容 -->
-						<img src="img/bgt.jpg" class="bgt" />
+						<img src="RE4wE9b.jfif" class="bgt" />
 						
 						<div class="box">
 							<div id="boxs">
