--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					</section><!-- 历程结束 -->
 				<section class="website-exp-section"><!-- 站点开始 -->
 					<div class="main"><!-- 站点内容开始 -->
-						<img src="img/bgt.jpg" class="bgt" />
+						<img src="RE4wE9b.jfif" class="bgt" />
 						
 						<a href="#" target="_blank"><div class="web">引导页</div></a><!-- 站点一 -->
 						<a href="#" target="_blank"><div class="web">引导页</div></a><!-- 站点二 -->
