--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
 									<li>
 										<i class="node-icon"><img src="img/tbl.svg"></i>
 										<span class="time" style="color:#2ECC71"><!DOCTYPE html>
+											
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Html+js获取当前时间</title>
+		<title></title>
 		<style type="text/css">
 			#Main
 			{
