--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 			container: "tp-weather-widget"
 			})
 		</script><!-- 天气插件结束 -->
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1867107328&auto=1&height=66"></iframe>
 		<script src="js/index.js"></script><!-- 核心插件 -->
 		<script src="js/all.js"></script><!-- 图标库 -->
 		<script src="js/Sitetime.js"></script><!-- 运行时间 -->
