--- a/school/index.html
+++ b/school/index.html
@@ -13,7 +13,7 @@
         </style>
     <title>在学校</title>
 </head>
-<body >
+<body style="background-image: url(help/bj2.img);">
     <style>
     
     
@@ -23,10 +23,10 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 5;
-        border-radius: 50px;
+        border-radius: 0px;
     background: #e0e0e0;
-    box-shadow:  35px 35px 54px #a4a4a4,
-                 -35px -35px 54px #ffffff;
+    box-shadow:  35px 35px 54px #a4a4a400,
+                 -35px -35px 54px #ffffff00;
                  text-align: center;
     }</style>
     <div style="color: rgb(0, 0, 0);
