--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
             </div>
             <div class="try-btn" onclick="postNow()">在学校</div>
             <div class="try-btn" onclick="postNow1()">在网络上</div>
+
+            <p>_______________________________________________</p>
+            <p>软件下载</p>
+            <div class="try-btn" onclick="postNow2()">下载库</div>
         </div>
     </div>
 </div>
@@ -139,14 +143,20 @@
     <div class="avatar-box">
         <img class="avatar" src="http://lf-cdn-tos.bytescm.com/obj/static/atsx-fe/campus/favicon.ico" alt="前端二次元">
         <p class="nickname">这是我的网站</p>
-    </div>
+        
+   
 </div>
+
+
 <script>
     function postNow () {
         location.href = 'school/index.html'
     }
     function postNow1() {
         location.href='eorry.html'
+    }
+    function postNow2() {
+        location.href='Download/index.html'
     }
 </script>
 <div id="tp-weather-widget"></div><!-- 天气插件 -->
