--- a/school/index.html
+++ b/school/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<label onclick="location.href = 'https://123chicloud.github.io'">回首页</label>
+<label onclick="location.href = '/'">回首页</label>
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
