--- a/school/help/windows10-11.html
+++ b/school/help/windows10-11.html
@@ -1,4 +1,4 @@
-<label onclick="location.href = 'https://123chicloud.github.io'" style="border-radius: 0px;
+<label onclick="location.href = '/'" style="border-radius: 0px;
 background: #e0e0e0;
 box-shadow:  10px 10px 20px #bebebe,
              -10px -10px 20px #ffffff;
