--- a/school/help/windows7.html
+++ b/school/help/windows7.html
@@ -11,7 +11,25 @@ box-shadow:  10px 10px 20px #bebebe,
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-image: url(bj2.img);">
-    
+<body style="background-image: url(bj2.img);"> 
+     <div style="text-align: center;">
+           <label style="text-align: center
+           ;font-size: 30px
+           ;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+           ">windows7 电脑C盘存储空间不足问题 解决方案</label> 
+        </div>
+    <div style="border-radius: 4px;
+    background: #e0e0e0;
+    box-shadow:  10px 10px 29px #9f9f9f,
+                 -10px -10px 29px #ffffff9d;">
+      
+        <div style="font-size: 20px;">
+            <p>下载微信缓存删除工具</p>
+            <p onclick="location.href='/Download'" style="color: #9f9f9f;">点击这里下载</p>
+            <p>打开,里面有setup.exe点开安装(以后可以在开始菜单里找到).点击删除即可<label style="color: red;">(退出微信！退出微信！退出微信！)</label></p>
+            <p>如果删除失败请手动删除（C盘：/用户（user）/本地用户名/文档/WeChat Files）</p>
+        </div>
+
+    </div>
 </body>
 </html>
