--- a/school/help/windows7.html
+++ b/school/help/windows7.html
@@ -4,7 +4,7 @@ box-shadow:  10px 10px 20px #bebebe,
              -10px -10px 20px #ffffff;
              font-size: 25px;">回首页</label>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +27,10 @@ box-shadow:  10px 10px 20px #bebebe,
             <p>下载微信缓存删除工具</p>
             <p onclick="location.href='/Download'" style="color: #9f9f9f;">点击这里下载</p>
             <p>打开,里面有setup.exe点开安装(以后可以在开始菜单里找到).点击删除即可<label style="color: red;">(退出微信！退出微信！退出微信！)</label></p>
-            <p>如果删除失败请手动删除（C盘：/用户（user）/本地用户名/文档/WeChat Files）</p>
+            <p>如果删除失败请手动删除（C盘：/用户（user）/本地用户名/文档（Documents）/WeChat Files）</p>
+            <p></p>
+            <p>删除所有流氓软件（例如360，金山毒霸，2345等）</p>
+            <p>杀毒软件推荐使用 <label style="color: #666666;" onclick="window.location.href='https://www.huorong.cn/person5.html'">火绒</label> </p>
         </div>
 
     </div>
