--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
 <div class="video-box">
     <video class="video-background" preload="auto" loop playsinline autoplay
            src="https://prod-streaming-video-msn-com.akamaized.net/278b1c4f-3545-422c-9d56-242f18adadc9/2e3d6097-b233-40af-88f4-a90a74a33fa0.mp4" tabindex="-1"
-           muted="muted"></video>
+           muted="muted"
+	   controls="controls" loop="loop"></video>
     <div class="layer">
         
         <div class="slogan">
