--- a/s/index.html
+++ b/s/index.html
@@ -278,8 +278,8 @@ button:active {
 <script>
   function load(){
     var URL= document.domain;
-    if(URL!='123yunfan.github.io/s'){
-      document.write('这里不是YunFan STUDIO官方 官方网址为https://123yunfan.github.io/s')
+    if(URL!='123yunfan.github.io/s/' || URL!=='123yunfan.github.io/s/index.html'){
+      document.write('这里不是YunFan STUDIO官方 官方网址为https://123yunfan.github.io/s/')
     }
     
   }
