--- a/s/index.html
+++ b/s/index.html
@@ -279,7 +279,7 @@ button:active {
   function load(){
     var URL= document.domain;
     alert(URL)
-    if(URL!='123yunfan.github.io/s/' || URL!='123yunfan.github.io/s/index.html'){
+    if(URL!='123yunfan.github.io'){
       document.write('这里不是YunFan STUDIO官方 官方网址为https://123yunfan.github.io/s/')
     }
     
