--- a/s/index.html
+++ b/s/index.html
@@ -13,15 +13,15 @@
 <body onload="autoscreen()">
     <div id="image1" style="background-image: url(https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=zh-CN); background-size: cover;background-position: center center; background-attachment: fixed; background-repeat: no-repeat ">
         <div >
-            <div style="position: absolute;top: 20px; left: 20px;"><iframe style="border-radius: 8px;" frameborder="no" border="0" marginwidth="0" marginheight="0" width=280 height=32 src="//music.163.com/outchain/player?type=2&id=1451778670&auto=1&height=66"></iframe></div>
+            <div style="position: absolute;top: 20px; left: 20px;"><iframe style="border-radius: 8px;" frameborder="no" border="0" marginwidth="0" marginheight="0" width=280 height=66 src="//music.163.com/outchain/player?type=2&id=1451778670&auto=1&height=66"></iframe></div>
             <div style="color: white;position: absolute;top: 20%;width: 100%;margin: 0 auto;">
                 <h1 style="text-align: center;">云帆工作室</h1>
                 <h5 style="text-align: center;">YunFan STUDIO</h5>
                 <div style="width: 40%;margin: 0 auto;">
                     <input id="txt" type="text" style="height: 30px; width: 100%;background-color: rgb(255, 255, 255);border-width:2px;border-color: rgb(187, 187, 187);border-style:solid ;border-radius: 48px;">
                 </div>
-                <div onclick="c()">
-                    <div style="width: 16%;margin:0 auto;margin-top: 50px;" onclick="c()">
+                <div >
+                    <div style="width: 16%;margin:0 auto;margin-top: 50px;" >
                     <button style="text-align: center;width: 100%;border-radius: 10px;background-color: white;border-style: solid;border-width: 2px;border-color: rgb(201, 201, 201);" onclick="c()">⚡搜索⚡</button>
                 </div>
                 </div>
