--- a/s/index.html
+++ b/s/index.html
@@ -9,6 +9,7 @@
     <title>QUARK SPACR</title>
 </head>
 <style>body{margin:0px;}
+div{font-family:Noto Sans SC}
     </style>
 <body onload="autoscreen()">
     <div id="image1" style="background-image: url(https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=zh-CN); background-size: cover;background-position: center center; background-attachment: fixed; background-repeat: no-repeat ">
@@ -31,7 +32,7 @@
     </div>
     <div id="bj1" style="background-color: rgba(0, 0, 0, 0);color: white;background-image: url('https://www.guanyujiang.com/api/bingapi.php?rand=true');background-position: center center;background-attachment: fixed; background-repeat: no-repeat;background-size: cover;">
         <div style="position: relative;top: 50px;">
-            <div style="text-align: center;font-size: 2em;">你好，这里是云帆工作室</div>
+            <div style="text-align: center;font-size: 2em;">你好，这里是QUARK SPACE</div>
             <h4 style="text-align: center;">一个人的工作室</h4>
             <div style="margin: 0 auto;width: 100%;text-align: center;font: 1em sans-serif;">
                 QUARK SPACE的联系方式
