--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "gnbku1znm0");
+</script>
+	<meta name="description" content="我是石头 这是imshito的网站">
+	
     <meta charset="utf-8"/>
     <meta name="referrer" content="no-referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="http://lf-cdn-tos.bytescm.com/obj/static/atsx-fe/campus/favicon.ico">
-    <title>HI,这是我的网站</title>
+    <title>imshito|HI,这是我的网站</title>
     <style>
         * {
             margin: 0;
