--- a/school/sgyz/index.html
+++ b/school/sgyz/index.html
@@ -8,12 +8,13 @@
     <title>石鼓第一中学|非官方网站</title>
     <link rel="stylesheet" href="./layui/css/layui.css">
     <script src="./layui/layui.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="wow/wow.js"></script>
     <script src="https://cdn.staticfile.org/jquery/1.8.3/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="wow/animate.css">
     <meta name="KEYWords" contect="石鼓一中">
     <meta name="KEYWords" contect="imshito">
     <meta name="KEYWords" contect="高州石鼓">
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
@@ -21,36 +22,59 @@
     new WOW().init();
 </script>
 
-<body class="layui-bg-cyan">
-    <ul class="layui-nav layui-bg-cyan" id="dhl">
-        <!-- //导航栏 -->
-        <li class="layui-nav-item">
-            <a href="">石鼓第一中学</a>
-        </li>
-        <li class="layui-nav-item"><a href="">首页</a> </li>
-        <li class="layui-nav-item">
-            <a>更多</a>
-            <dl class="layui-nav-child">
-                <dd><a href="">待开发</a></dd>
-            </dl>
-        </li>
-        <li class="layui-nav-item"><a href="">关于作者</a></li>
-    </ul>
-    <!-- -------------- -->
-    <div>
-        <div style="background-image: url(index1.jpg);background-size:cover;width: 100%;height: 550PX;background-attachment:fixed;">   
-            <div style="text-align: center;">
-                <h1 style="margin-top: 10%;position: absolute; width: 100%;">石鼓第一中学</h1>
+<body class="layui-bg-cyan wow bounceInUp">
+    <div
+        style="background-image: url(index1.jpg);background-size: cover;background-position: center center;background-repeat: no-repeat;background-attachment: fixed;">
+        <ul class="layui-nav layui-bg-cyan" id="dhl">
+            <!-- //导航栏 -->
+            <li class="layui-nav-item">
+                <a href="">石鼓第一中学</a>
+            </li>
+            <li class="layui-nav-item"><a href="">首页</a> </li>
+            <li class="layui-nav-item">
+                <a>更多</a>
+                <dl class="layui-nav-child">
+                    <dd><a href="">待开发</a></dd>
+                </dl>
+            </li>
+            <li class="layui-nav-item"><a href="">关于作者</a></li>
+        </ul>
+        <!-- -------------- -->
+        <div>
+            <div style="text-align: center;margin-top: 100px;">
+                <span style="font-size: 35px;">欢迎来到 石鼓第一中学</span>
+                <div>
+                    <span style="font-size: 10px;">Welcome to Stone Drum No. 1 Middle School</span>
+                </div>
+                <div>
+                    <span style="font-size: 5px;">(非官方网站)</span>
+                </div>
+
             </div>
         </div>
+        <div style="margin-top: 20%;">
+            <div class="wow bounceInUp">
+                <div style="
+                margin: 0 auto;
+                border-radius: 0px;
+                background: #ffffff;
+                box-shadow:  5px 5px 40px #fcfcfc00,
+                 -5px -5px 40px #ffffff00;
+                width: 90%;height: 300px; ">
+
+                    <div>
+
+                    </div>
+                </div>
+            </div>
+
+
+
+
+        </div>
+
     </div>
-    <div>
-        <div>
-            <h1>简介</h1>
-        </div>
-        <div>
-            <h2></h2>
-        </div>
+
     </div>
 
 </body>
