--- a/school/sgyz/index.html
+++ b/school/sgyz/index.html
@@ -20,6 +20,12 @@
 </head>
 <script>
     new WOW().init();
+    function OpeanSendEmail(){
+        layer.open({
+  type: 2, 
+  content:  'email.html'
+}); 
+    }
 </script>
 
 <body class="layui-bg-cyan wow bounceInUp">
@@ -34,6 +40,7 @@
             <li class="layui-nav-item">
                 <a>更多</a>
                 <dl class="layui-nav-child">
+                    <dd><a onclick="OpeanSendEmail()">发出意见</a></dd>
                     <dd><a href="">待开发</a></dd>
                 </dl>
             </li>
@@ -60,10 +67,141 @@
                 background: #ffffff;
                 box-shadow:  5px 5px 40px #fcfcfc00,
                  -5px -5px 40px #ffffff00;
-                width: 90%;height: 300px; ">
+                width: 90%;height: 140px; ">
 
-                    <div>
+                    <div style="color: black ;">
+                        <div><span style="    
+                        position: absolute;
+                        margin-left: 15%;
+                        width: 40%;
+                        margin-top: 30px;
+                        ">
+                                <h1 style="font-size: 25px;">
+                                    不忘<strong style="color: red;">初心</strong><br>
+                                    继续前进
+                                </h1>
+                                <span style="font-size: 15px;">
+                                    建校以来，我校以来一直推行用心治校，规范治校
+                                </span>
+                            </span>
+                        </div>                 
+                    </div>
+                </div>
+            </div>
+            <div class="wow bounceInUp" style="margin-top: 30px;">
+                <div style="
+                margin: 0 auto;
+                border-radius: 0px;
+                background: #ffffff;
+                box-shadow:  5px 5px 40px #fcfcfc00,
+                 -5px -5px 40px #ffffff00;
+                width: 90%;height: 140px; ">
 
+                    <div style="color: black ;">
+                        <div><span style="    
+                        position: absolute;
+                        margin-left: 15%;
+                        width: 60%;
+                        margin-top: 30px;
+                        ">
+                                <h1 style="font-size: 25px;">
+                                    师资力量<br>
+                                    <p style="background-image:-webkit-linear-gradient(top, #ff3700,#ff0000,#de6912);
+                                    -webkit-background-clip:text;
+                                    -webkit-text-fill-color:transparent;
+                                  "><strong>强大</strong>  </p>
+                                </h1>
+                                <span style="font-size: 15px;">
+                                    教师共 <strong>400+</strong>  配备音乐室、美术室、计算机室、化学实验室、等一系列配套教室
+                                </span>
+                            </span>
+                        </div>                 
+                    </div>
+                </div>
+            </div>
+            <div class="wow bounceInUp" style="margin-top: 30px;">
+                <div style="
+                margin: 0 auto;
+                border-radius: 0px;
+                background: #ffffff;
+                box-shadow:  5px 5px 40px #fcfcfc00,
+                 -5px -5px 40px #ffffff00;
+                width: 90%;height: 140px; ">
+
+                    <div style="color: black ;">
+                        <div><span style="    
+                        position: absolute;
+                        margin-left: 15%;
+                        width: 60%;
+                        margin-top: 30px;
+                        ">
+                                <h1 style="font-size: 25px;">
+                                    农村初级中学
+                                    <p style="background-image:-webkit-linear-gradient(top, #ff3700,#ff0000,#de6912);
+                                    -webkit-background-clip:text;
+                                    -webkit-text-fill-color:transparent;
+                                  "><strong>第一</strong>  </p>
+                                </h1>
+                                <span style="font-size: 15px;">
+                                    每年升学重点高中约 <strong>350+</strong> ,占学生总数的 <strong>45%+</strong>
+                                </span>
+                            </span>
+                        </div>                 
+                    </div>
+                </div>
+            </div>
+            <div class="wow bounceInUp" style="margin-top: 30px;">
+                <div style="
+                margin: 0 auto;
+                border-radius: 0px;
+                background: #ffffff;
+                box-shadow:  5px 5px 40px #fcfcfc00,
+                 -5px -5px 40px #ffffff00;
+                width: 90%;height: 140px; ">
+
+                    <div style="color: black ;">
+                        <div><span style="    
+                        position: absolute;
+                        margin-left: 15%;
+                        width: 60%;
+                        margin-top: 30px;
+                        ">
+                                <h1 style="font-size: 25px;">
+                                    创建  <strong style="color: #de6912;">足球</strong> 特色学校
+                                   
+                                </h1>
+                                <span style="font-size: 15px;">
+                                    本校被评为广东省足球特色学校
+                                </span>
+                            </span>
+                        </div>                 
+                    </div>
+                </div>
+            </div>
+            <div class="wow bounceInUp" style="margin-top: 30px;">
+                <div style="
+                margin: 0 auto;
+                border-radius: 0px;
+                background: #ffffff;
+                box-shadow:  5px 5px 40px #fcfcfc00,
+                 -5px -5px 40px #ffffff00;
+                width: 90%;height: 140px; ">
+
+                    <div style="color: black ;">
+                        <div><span style="    
+                        position: absolute;
+                        margin-left: 15%;
+                        width: 60%;
+                        margin-top: 30px;
+                        ">
+                                <h1 style="font-size: 25px;">
+                                    在校班主任 <strong>52</strong>人<br>
+                                    目前在校学生<strong>2950</strong>人
+                                </h1>
+                                <p>2023/4/15</p>
+                             
+                            </span>
+                        </div>                 
                     </div>
                 </div>
             </div>
@@ -77,6 +215,11 @@
 
     </div>
 
+
+    <div style="margin-bottom: 0px;">
+        <p style="text-align: center;">作者：imshito</p>
+
+    </div>
 </body>
 
 </html>
