--- a/school/sgyz/index.html
+++ b/school/sgyz/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="wow/animate.css">
     <meta name="KEYWords" contect="石鼓一中">
     <meta name="KEYWords" contect="imshito">
+    <meta name="msvalidate.01" content="A10C9AF6F0DAC9E3BF451E4DC575DC4E" />
     <meta name="KEYWords" contect="高州石鼓">
     <link rel="stylesheet" href="style.css">
 
