--- a/school/sgyz/index.html
+++ b/school/sgyz/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.staticfile.org/jquery/1.8.3/jquery.min.js"></script>
     <link rel="stylesheet" href="wow/animate.css">
     <meta name="KEYWords" contect="石鼓一中">
-    ＜meta name ="keywords" content="高州，石鼓，石鼓一中，茂名，imshito，学校，官网，石鼓第一中学"＞
+    <meta name ="keywords" content="高州，石鼓，石鼓一中，茂名，imshito，学校，官网，石鼓第一中学">
     <meta name="KEYWords" contect="imshito">
     <meta name="KEYWords" contect="高州石鼓">
     <link rel="stylesheet" href="style.css">
