--- a/school/sgyz/tieba.html
+++ b/school/sgyz/tieba.html
@@ -41,7 +41,7 @@
 
 <body>
     <div
-        style="background-image: url(index1.jpg);background-size: cover;background-position: center center;background-repeat: no-repeat;background-attachment: fixed;">
+        style="background-image: url(index1.jpg);background-size: cover;background-position: center center;background-repeat: no-repeat;background-attachment: fixed;height: 15000px;">
         <ul class="layui-nav layui-bg-cyan" id="dhl">
             <!-- //导航栏 -->
             <li class="layui-nav-item">
@@ -106,31 +106,45 @@
                 </div>
             </div>
         </div>
+        <div style="border: 1px;">
+
+        </div>
 
 
 
 
 
-
-
-
-
-
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- -------------- -->
-</body>
-
-</html>
+       
+        <div style="width: 90%;background-color: white; margin: 20px auto;height: 200px;" class="wow bounceInUp" >
+            <div style="width: 90%;margin: 50px auto;">
+                <h1 style="margin-top: 30px;"><strong>dada</strong></h1>
+                <p>dadada</p>
+                <div style="text-align: right;">
+                    <p>大大大大大</p>
+                    <p>2023/4/16</p>
+                </div>
+            </div>
+        </div>
+        <!--tiezhi-->
+        <div style="width: 90%;background-color: white; margin: 20px auto;height: 200px;" class="wow bounceInUp" >
+            <div style="width: 90%;margin: 50px auto;">
+                <h1 style="margin-top: 30px;"><strong>adaaaaaaaaaaaaaaaaaaa</strong></h1>
+                <p>aaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <div style="text-align: right;">
+                    <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>2023/4/16</p>
+                </div>
+            </div>
+        </div>
+        <!--tiezhi-->
+        <div style="width: 90%;background-color: white; margin: 20px auto;height: 200px;" class="wow bounceInUp" >
+            <div style="width: 90%;margin: 50px auto;">
+                <h1 style="margin-top: 30px;"><strong>zl</strong></h1>
+                <p></p>
+                <div style="text-align: right;">
+                    <p></p>
+                    <p>2023/4/16</p>
+                </div>
+            </div>
+        </div>
+        <!--tiezhi-->
