--- a/school/sgyz/index.html
+++ b/school/sgyz/index.html
@@ -1,232 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>石鼓第一中学|非官方网站</title>
-    <link rel="stylesheet" href="./layui/css/layui.css">
-    <script src="./layui/layui.js"></script>
-    <script src="wow/wow.js"></script>
-    <script src="https://cdn.staticfile.org/jquery/1.8.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="wow/animate.css">
-    <meta name="KEYWords" contect="石鼓一中">
-    <meta name="KEYWords" contect="imshito">
-    <meta name="KEYWords" contect="高州石鼓">
-    <link rel="stylesheet" href="style.css">
-
-
-</head>
-<script>
-    new WOW().init();
-    function OpeanSendEmail(){
-        layer.open({
-  type: 2, 
-  content:  'email.html',
-  area: ['500px', '300px']
-}); 
-    }
-</script>
-
-<body class="layui-bg-cyan wow bounceInUp">
-    <div
-        style="background-image: url(index1.jpg);background-size: cover;background-position: center center;background-repeat: no-repeat;background-attachment: fixed;">
-        <ul class="layui-nav layui-bg-cyan" id="dhl">
-            <!-- //导航栏 -->
-            <li class="layui-nav-item" > 
-                <img src="logo.png" alt="" height="50px">
-            </li>
-            <li class="layui-nav-item">
-                <a href="">石鼓第一中学</a>
-            </li>
-            <li class="layui-nav-item"><a href="">首页</a> </li>
-            <li class="layui-nav-item" >
-                <a href="tieba.html">帖子<span class="layui-badge">新</span></a>
-            </li>
-            <li class="layui-nav-item">
-                <a>更多</a>
-                <dl class="layui-nav-child">
-                    <dd><a onclick="OpeanSendEmail()">发出意见</a></dd>
-                    <dd><a href="">待开发</a></dd>
-                </dl>
-            </li>
-            <li class="layui-nav-item"><a href="aboutme.html">关于作者</a></li>
-        </ul>
-        <!-- -------------- -->
-        <div>
-            <div style="text-align: center;margin-top: 100px;">
-                <span style="font-size: 35px;">欢迎来到 石鼓第一中学</span>
-                <div>
-                    <span style="font-size: 10px;">Welcome to Stone Drum No. 1 Middle School</span>
-                </div>
-                <div>
-                    <span style="font-size: 5px;">(非官方网站)</span>
-                </div>
-
-            </div>
-        </div>
-        <div style="margin-top: 20%;">
-            <div class="wow bounceInUp">
-                <div style="
-                margin: 0 auto;
-                border-radius: 0px;
-                background: #ffffff;
-                box-shadow:  5px 5px 40px #fcfcfc00,
-                 -5px -5px 40px #ffffff00;
-                width: 90%;height: 140px; ">
-
-                    <div style="color: black ;">
-                        <div><span style="    
-                        position: absolute;
-                        margin-left: 15%;
-                        width: 40%;
-                        margin-top: 30px;
-                        ">
-                                <h1 style="font-size: 25px;">
-                                    不忘<strong style="color: red;">初心</strong><br>
-                                    继续前进
-                                </h1>
-                                <span style="font-size: 15px;">
-                                    建校以来，我校以来一直推行用心治校，规范治校
-                                </span>
-                            </span>
-                        </div>                 
-                    </div>
-                </div>
-            </div>
-            <div class="wow bounceInUp" style="margin-top: 30px;">
-                <div style="
-                margin: 0 auto;
-                border-radius: 0px;
-                background: #ffffff;
-                box-shadow:  5px 5px 40px #fcfcfc00,
-                 -5px -5px 40px #ffffff00;
-                width: 90%;height: 140px; ">
-
-                    <div style="color: black ;">
-                        <div><span style="    
-                        position: absolute;
-                        margin-left: 15%;
-                        width: 60%;
-                        margin-top: 30px;
-                        ">
-                                <h1 style="font-size: 25px;">
-                                    师资力量<br>
-                                    <p style="background-image:-webkit-linear-gradient(top, #ff3700,#ff0000,#de6912);
-                                    -webkit-background-clip:text;
-                                    -webkit-text-fill-color:transparent;
-                                  "><strong>强大</strong>  </p>
-                                </h1>
-                                <span style="font-size: 15px;">
-                                    教师共 <strong>400+</strong>  配备音乐室、美术室、计算机室、化学实验室、等一系列配套教室
-                                </span>
-                            </span>
-                        </div>                 
-                    </div>
-                </div>
-            </div>
-            <div class="wow bounceInUp" style="margin-top: 30px;">
-                <div style="
-                margin: 0 auto;
-                border-radius: 0px;
-                background: #ffffff;
-                box-shadow:  5px 5px 40px #fcfcfc00,
-                 -5px -5px 40px #ffffff00;
-                width: 90%;height: 140px; ">
-
-                    <div style="color: black ;">
-                        <div><span style="    
-                        position: absolute;
-                        margin-left: 15%;
-                        width: 60%;
-                        margin-top: 30px;
-                        ">
-                                <h1 style="font-size: 25px;">
-                                    农村初级中学
-                                    <p style="background-image:-webkit-linear-gradient(top, #ff3700,#ff0000,#de6912);
-                                    -webkit-background-clip:text;
-                                    -webkit-text-fill-color:transparent;
-                                  "><strong>第一</strong>  </p>
-                                </h1>
-                                <span style="font-size: 15px;">
-                                    每年升学重点高中约 <strong>350+</strong> ,占学生总数的 <strong>45%+</strong>
-                                </span>
-                            </span>
-                        </div>                 
-                    </div>
-                </div>
-            </div>
-            <div class="wow bounceInUp" style="margin-top: 30px;">
-                <div style="
-                margin: 0 auto;
-                border-radius: 0px;
-                background: #ffffff;
-                box-shadow:  5px 5px 40px #fcfcfc00,
-                 -5px -5px 40px #ffffff00;
-                width: 90%;height: 140px; ">
-
-                    <div style="color: black ;">
-                        <div><span style="    
-                        position: absolute;
-                        margin-left: 15%;
-                        width: 60%;
-                        margin-top: 30px;
-                        ">
-                                <h1 style="font-size: 25px;">
-                                    创建  <strong style="color: #de6912;">足球</strong> 特色学校
-                                   
-                                </h1>
-                                <span style="font-size: 15px;">
-                                    本校被评为广东省足球特色学校
-                                </span>
-                            </span>
-                        </div>                 
-                    </div>
-                </div>
-            </div>
-            <div class="wow bounceInUp" style="margin-top: 30px;">
-                <div style="
-                margin: 0 auto;
-                border-radius: 0px;
-                background: #ffffff;
-                box-shadow:  5px 5px 40px #fcfcfc00,
-                 -5px -5px 40px #ffffff00;
-                width: 90%;height: 140px; ">
-
-                    <div style="color: black ;">
-                        <div><span style="    
-                        position: absolute;
-                        margin-left: 15%;
-                        width: 60%;
-                        margin-top: 30px;
-                        ">
-                                <h1 style="font-size: 25px;">
-                                    在校班主任 <strong>52</strong>人<br>
-                                    目前在校学生<strong>2950</strong>人
-                                </h1>
-                                <p>2023/4/15</p>
-                             
-                            </span>
-                        </div>                 
-                    </div>
-                </div>
-            </div>
-
-
-
-
-        </div>
-
-    </div>
-
-    </div>
-
-
-    <div style="margin-bottom: 0px;">
-        <p style="text-align: center;">作者：imshito</p>
-
-    </div>
-</body>
-
-</html>
+网站已转移到<a href='gzsgyz.github.io'><strong> https://gzsgyz.github.io</strong> </a>
