--- a/school/sgyz/index.html
+++ b/school/sgyz/index.html
@@ -1,1 +1,1 @@
-网站已转移到<a href='gzsgyz.github.io'><strong> https://gzsgyz.github.io</strong> </a>
+网站已转移到<a href='https://gzsgyz.github.io'><strong> https://gzsgyz.github.io</strong> </a>
