--- a/school/sgyz/index.html
+++ b/school/sgyz/index.html
@@ -1,1 +1,3 @@
 网站已转移到<a href='https://gzsgyz.github.io'><strong> https://gzsgyz.github.io</strong> </a>
+感谢陪伴，需要提交文件请联系作者Q:3421016150
+请求更改可以GitHub<a href='https://gzsgyz.github.io'><strong> https://github.com/gzsgyz</strong> </a>
