--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Im'ShiTo|星火!即将燎原</title>
-
+	<meta name="keywords" content="imshito,blog,程序员，梦开始的地方，星火">
         <script src="layui/layui.js"></script>
         <script src="layui/notify.js"></script>
         <link rel="stylesheet" href="layui/css/layui.css">
