--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			
 		</script><!-- 天气插件结束 -->
         <div
-            style="background-image:url('bj.webp');background-repeat:no-repeat;background-attachment:fixed; height: 200%;">
+            style="background-image:url('bj.webp');background-repeat:no-repeat;background-attachment:fixed;background-position: center;">
             <div style="line-height: 400px;;margin-left: 22.5%;">
                 <h1 style="font-size: 40px;color: white;"><strong
                         style="color: #ff2a0e;font-style:45px;">星火!</strong>
