--- a/sj/index.html
+++ b/sj/index.html
@@ -101,7 +101,7 @@
             <div class="layui-card-body">
               <div class="layui-panel">
                 <blockquote class="layui-elem-quote" style="text-align: center">
-                <h1 id="mz" style="margin:auto,0;">mz</h1>
+                <h1 id="mz" style="margin:auto,0;">名字</h1>
                 <div class="layui-btn-group" style="margin-top: 150px;width: 205px;" id="btngroup">
                     
                     <button class="layui-btn" id="btnpt" onclick="ptc()">普通摇</button>
