--- a/sj/index.html
+++ b/sj/index.html
@@ -47,7 +47,7 @@
         <div class="layui-panel">
             <div class="layui-card">
                 <div class="layui-card-header">天苍苍，野茫茫，风吹草低见牛羊。<span class="layui-btn-sm" onclick="
-                    if (localStorage.getItem('adminkey'==prompt('输入管理员密码'))){
+                    if (localStorage.getItem('adminkey')==prompt('输入管理员密码')){
                     layer.open({
                       type: 2,
                       offset: 'r',
